// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should even parse examples with custom extensions 1`] = `
Array [
  Object {
    "content": "Custom extensions",
    "type": "markdown",
  },
  Object {
    "content": 
<AppButton>
  Example in vue
</AppButton>
,
    "settings": Object {},
    "type": "code",
  },
]
`;

exports[`should parse examples settings correctly 1`] = `
Array [
  Object {
    "content": "Pass props to CodeRenderer",
    "type": "markdown",
  },
  Object {
    "content": 
<h1>
  Hello Markdown!
</h1>
,
    "settings": Object {
      "showcode": true,
    },
    "type": "code",
  },
  Object {
    "content": 
<h1>
  Example in frame and Without editor
</h1>
,
    "settings": Object {
      "frame": Object {
        "width": "400px",
      },
    },
    "type": "code",
  },
  Object {
    "content": "Pass props to PreviewRenderer",
    "type": "markdown",
  },
  Object {
    "content": 
<h2>
  Hello Markdown!
</h2>
,
    "settings": Object {
      "noeditor": true,
    },
    "type": "code",
  },
  Object {
    "content": "\`\`\`jsx
&lt;h2&gt;This is Highlighted!<span class=\\"xml\\"><span class=\\"hljs-tag\\">&lt;/<span class=\\"hljs-name\\">h2</span>&gt;</span></span>
\`\`\`",
    "type": "markdown",
  },
]
`;

exports[`should parse undefined custom extensions without throwing 1`] = `
Array [
  Object {
    "content": "Undefined extensions (default)",
    "type": "markdown",
  },
  Object {
    "content": 
<AppButton>
  Example in jsx with undefined extensions
</AppButton>
,
    "settings": Object {},
    "type": "code",
  },
  Object {
    "content": "\`\`\`pizza
Unknown language: \\"pizza\\"
\`\`\`",
    "type": "markdown",
  },
]
`;

exports[`should separate Markdown and component examples 1`] = `
Array [
  Object {
    "content": "# Header

Text with _some_ **formatting** and a [link](/foo).

<div>And some HTML.</div>

![Image](/bar.png)

This code example should be rendered as a playground:",
    "type": "markdown",
  },
  Object {
    "content": 
<h1>
  Hello Markdown!
</h1>
,
    "settings": Object {},
    "type": "code",
  },
  Object {
    "content": "Text with some \`code\` (playground too).",
    "type": "markdown",
  },
  Object {
    "content": 
<h2>
  Hello Markdown!
</h2>
,
    "settings": Object {},
    "type": "code",
  },
  Object {
    "content": "And some language and modifier (playground again):",
    "type": "markdown",
  },
  Object {
    "content": 
<h3>
  Hello Markdown!
</h3>
,
    "settings": Object {
      "noeditor": true,
    },
    "type": "code",
  },
  Object {
    "content": "This should be just highlighted:

\`\`\`jsx
&lt;h4&gt;Hello Markdown!<span class=\\"xml\\"><span class=\\"hljs-tag\\">&lt;/<span class=\\"hljs-name\\">h4</span>&gt;</span></span>
\`\`\`

This should be highlighted too:

\`\`\`html
<span class=\\"hljs-tag\\">&lt;<span class=\\"hljs-name\\">h5</span>&gt;</span>Hello Markdown!<span class=\\"hljs-tag\\">&lt;/<span class=\\"hljs-name\\">h5</span>&gt;</span>
\`\`\`",
    "type": "markdown",
  },
]
`;
